# ceremonial_code_meditation

./: .dockerignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: check-latest-deps.yml
db/client/: init-mongo.js
db/init/: 00-extensions.sql
rabbitmq/: docker-compose.yml
services/backend/: Cargo.toml  rustfmt.toml
services/backend/.cargo/: config.toml
services/backend/client-service/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
services/backend/client-service/src/: lib.rs  main.rs
services/backend/common/: Cargo.toml
services/backend/common/src/rabbitmq/: mod.rs
services/backend/portfolio-service/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
services/backend/portfolio-service/migrations/: 20260208164716_initial.sql
services/backend/portfolio-service/scripts/: recreate-test-db.sql  truncate-tables.sql
services/backend/portfolio-service/src/: context.rs  error.rs  lib.rs  main.rs
services/backend/portfolio-service/src/model/: asset.rs  base.rs  base_bmc.rs  mod.rs  store.rs  transaction.rs
services/backend/portfolio-service/tests/: test_assets_api.rs
