[workspace]
resolver = "3"
members = ["client-service", "common"]

[workspace.package]
edition = "2024"
rust-version = "1.93"
publish = false

[workspace.dependencies]
thiserror = { version = "2" }
eyre = { version = "0.6" }
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
dotenvy = { version = "0.15" }
lapin = { version = "3.7" }
chrono = { version = "0.4" }
mongodb = { version = "3.5" }

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.dev]
opt-level = 0 # Prefer fast dev builds over speed.
incremental = true # Only recompile what changed, instead of the whole project.

[profile.release]
opt-level = 3     # Speed is preferred.
lto = true        # Enable link-time-optimizations.
panic = "abort"   # No unwind, reduces binary size and runtime overhead.
strip = "symbols" # Generate debug symbols, but remove them afterwards.
#trim-paths = "all"  # Remove potentially privileged information from the binaries
