[package]
name = "client-service"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
eyre = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true, optional = true }

[features]
default = []
dev-env = ["dotenvy"]
