[package]
name = "client-service"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
thiserror = { workspace = true }
eyre = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true, optional = true }
mongodb = { workspace = true }

common = { path = "../common" }

[features]
default = []
dev-env = ["dotenvy"]

[lints]
workspace = true
